test/good/functions/nested02.px

for i in 1..3 do
    func f(x: Int): Int def
        return x * i
    print f(i)
