test/bad/functions/nested3.px

func f() def
    func g1() Int def
        return 1
    func g2() Int def
        return g1() + 1
    return
